--- a/services.html
+++ b/services.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>An Yên Spa</title>
         <link rel="icon" href="/images/logo.jpg" type="image/x-icon">
-        <link href="/css/style.css" rel="stylesheet">
-        <link href="/css/home.css" rel="stylesheet">
+        <link href="/an-yen-website/css/style.css" rel="stylesheet">
+        <link href="/an-yen-website/css/home.css" rel="stylesheet">
         <link
             href="https://fonts.googleapis.com/css2?family=Chivo:wght@200&family=Gentium+Plus&display=swap"
             rel="stylesheet">
@@ -59,7 +59,7 @@
 
         <!-- Chatbot ẩn mặc định -->
 
-        <script src="/js/script.js"></script>
+        <script src="/an-yen-website/js/script.js"></script>
         <script
             src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     </body>
