--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>An Yên Spa</title>
+        <base href="/an-yen-website/">
         <link rel="icon" href="/images/logo.jpg" type="image/x-icon">
-        <link href="/an-yen-website/css/style.css" rel="stylesheet">
-        <link href="/an-yen-website/css/home.css" rel="stylesheet">
+        <link href="/css/style.css" rel="stylesheet">
+        <link href="/css/home.css" rel="stylesheet">
         <link
             href="https://fonts.googleapis.com/css2?family=Chivo:wght@200&family=Gentium+Plus&display=swap"
             rel="stylesheet">
@@ -87,7 +88,7 @@
                             <h1
                                 style="font-family: 'Chivo', sans-serif; font-weight: 900; text-transform: uppercase; color: #006747">Về
                                 An Yên..</h1>
-                                <hr>
+                            <hr>
                             <p class="mt-2">
                                 Lấy cảm hứng từ thiên nhiên và phong cách sống
                                 chậm, <strong>AN YÊN.. Spa</strong> mang đến một
@@ -98,12 +99,14 @@
                                 sống vội vã, nơi bạn được lắng nghe chính mình
                                 và thư giãn trong sự kết nối sâu sắc với cơ
                                 thể.<br><br>
-                                Tại <strong>AN YÊN..</strong>, chúng tôi sử dụng nguyên liệu tự
+                                Tại <strong>AN YÊN..</strong>, chúng tôi sử dụng
+                                nguyên liệu tự
                                 nhiên, kết hợp phương pháp trị liệu truyền thống
                                 để tạo nên trải nghiệm chăm sóc toàn diện, tinh
                                 tế và đầy yêu thương. Chúng tôi cung cấp đa dạng
                                 các liệu trình chăm sóc như:<br>
-                                <ul style="list-style: none; margin-top:-1vh; padding-left: 0.3vw;">
+                                <ul
+                                    style="list-style: none; margin-top:-1vh; padding-left: 0.3vw;">
                                     <li>Massage toàn thân</li>
                                     <li>Gội đầu dưỡng sinh theo Đông y</li>
                                     <li>Chăm sóc dưỡng da mặt và cơ thể</li>
@@ -210,7 +213,7 @@
 
         <!-- Chatbot ẩn mặc định -->
 
-        <script src="/an-yen-website/js/script.js"></script>
+        <script src="/js/script.js"></script>
         <script
             src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     </body>
