--- a/services.html
+++ b/services.html
@@ -6,9 +6,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>An Yên Spa</title>
+        <base href="/an-yen-website/">
         <link rel="icon" href="/images/logo.jpg" type="image/x-icon">
-        <link href="/an-yen-website/css/style.css" rel="stylesheet">
-        <link href="/an-yen-website/css/home.css" rel="stylesheet">
+        <link href="/css/style.css" rel="stylesheet">
+        <link href="/css/home.css" rel="stylesheet">
         <link
             href="https://fonts.googleapis.com/css2?family=Chivo:wght@200&family=Gentium+Plus&display=swap"
             rel="stylesheet">
@@ -33,7 +34,7 @@
                     style="margin-left:27%; margin-top: 5vh; margin-bottom: 5vh; border-radius: 30px !important;">
             </div>
             <!--Float tool-->
-            <div> 
+            <div>
                 <!-- Book-->
                 <button id="fa-calendar" class="btn btn_fixed"
                     style="bottom: 128px;"
@@ -59,7 +60,7 @@
 
         <!-- Chatbot ẩn mặc định -->
 
-        <script src="/an-yen-website/js/script.js"></script>
+        <script src="/js/script.js"></script>
         <script
             src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     </body>
