--- a/book.html
+++ b/book.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>An Yên Spa</title>
+        <base href="/an-yen-website/">
         <link rel="icon" href="/images/logo.jpg" type="image/x-icon">
-        <link href="/an-yen-website/css/style.css" rel="stylesheet">
-        <link href="/an-yen-website/css/book.css" rel="stylesheet">
+        <link href="/css/style.css" rel="stylesheet">
+        <link href="/css/book.css" rel="stylesheet">
         <link
             href="https://fonts.googleapis.com/css2?family=Chivo:wght@200&family=Gentium+Plus&display=swap"
             rel="stylesheet">
@@ -51,7 +52,7 @@
 
         <!-- Chatbot ẩn mặc định -->
 
-        <script src="/an-yen-website/js/script.js"></script>
+        <script src="/js/script.js"></script>
         <script
             src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
         <!-- Script từ Calendly -->
