--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>An Yên Spa</title>
-        <base href="/an-yen-website/">
+        <base href="/anyenspa/">
         <link rel="icon" href="/images/logo.jpg" type="image/x-icon">
         <link href="/css/style.css" rel="stylesheet">
         <link href="/css/home.css" rel="stylesheet">
