remove /css/ /js/ /images/

--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>An Yên Spa</title>
         <base href="/anyenspa/">  
-        <link rel="icon" href="/images/logo.jpg" type="image/x-icon">
-        <link href="/css/style.css" rel="stylesheet">
-        <link href="/css/home.css" rel="stylesheet">
+        <link rel="icon" href="logo.jpg" type="image/x-icon">
+        <link href="style.css" rel="stylesheet">
+        <link href="home.css" rel="stylesheet">
         <link
             href="https://fonts.googleapis.com/css2?family=Chivo:wght@200&family=Gentium+Plus&display=swap"
             rel="stylesheet">
@@ -27,7 +27,7 @@
         <div id="content">
             <!--Main Content-->
             <div style="background-color: #fcfcfc;">
-                <img src="/images/about.png" alt="about" width="45%"
+                <img src="about.png" alt="about" width="45%"
                     style="margin-left:27%; margin-top: 5vh; margin-bottom: 5vh; border-radius: 30px !important;">
             </div>
             <!--Float tool-->
