--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>An Yên Spa</title>
         <base href="/anyenspa/">
-        <link rel="icon" href="/images/logo.jpg" type="image/x-icon">
-        <link href="/css/style.css" rel="stylesheet">
-        <link href="/css/home.css" rel="stylesheet">
+        <link rel="icon" href="logo.jpg" type="image/x-icon">
+        <link href="style.css" rel="stylesheet">
+        <link href="home.css" rel="stylesheet">
         <link
             href="https://fonts.googleapis.com/css2?family=Chivo:wght@200&family=Gentium+Plus&display=swap"
             rel="stylesheet">
@@ -29,7 +29,7 @@
             <div>
                 <!-- Welcome -->
                 <div class="intro-section">
-                    <img src="/images/header.jpg" alt="main" class="bg-image" />
+                    <img src="header.jpg" alt="main" class="bg-image" />
                     <div class="overlay"></div>
                     <div class="intro-box">
                         <h1
@@ -47,7 +47,7 @@
                     font-family: 'Chivo', sans-serif; font-weight: bold;">DỊCH
                         VỤ NỔI BẬT</h1>
                     <div class="col-4 service_detail">
-                        <img src="/images/binh.png"
+                        <img src="binh.png"
                             class="d-block mx-auto popular_img"
                             alt="Bình" width="350vw" height="400vh" />
                         <div class="detail_cover">
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="col-4 service_detail">
-                        <img src="/images/yen.png"
+                        <img src="yen.png"
                             class="d-block mx-auto popular_img"
                             alt="Bình" width="350vw" height="400vh" />
                         <div class="detail_cover">
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <div class="col-4 service_detail">
-                        <img src="/images/binhan_yenlanh.png"
+                        <img src="binhan_yenlanh.png"
                             class="d-block mx-auto popular_img" alt="Bình"
                             width="350vw"
                             height="400vh" />
@@ -116,7 +116,7 @@
                             </p>
                         </div>
                         <div class="col-md-4 text-center">
-                            <img src="/images/Intro.jpg" alt="about"
+                            <img src="Intro.jpg" alt="about"
                                 class="img-fluid rounded"
                                 style="width: 100%; height: 55vh;" />
                         </div>
@@ -126,7 +126,7 @@
                 <div class="d-flex my-5vh">
                     <a href="/services.html" class="image-wrapper"
                         style="width: 20%; position: relative;">
-                        <img src="/images/binh.png" alt="binh"
+                        <img src="binh.png" alt="binh"
                             class="image_info"
                             width="100%" height="380vh" />
                         <div class="info-box">
@@ -138,7 +138,7 @@
                     </a>
                     <a href="/services.html" class="image-wrapper"
                         style="width: 20%; position: relative;">
-                        <img src="/images/an.png" alt="binh" class="image_info"
+                        <img src="an.png" alt="binh" class="image_info"
                             width="100%" height="380vh" />
                         <div class="info-box">
                             <p class="text-center popular_head">Gói An</p>
@@ -149,7 +149,7 @@
                     </a>
                     <a href="/services.html" class="image-wrapper"
                         style="width: 20%; position: relative;">
-                        <img src="/images/yen.png" alt="binh" class="image_info"
+                        <img src="yen.png" alt="binh" class="image_info"
                             width="100%" height="380vh" />
                         <div class="info-box">
                             <p class="text-center popular_head">Gói Yên</p>
@@ -160,7 +160,7 @@
                     </a>
                     <a href="/services.html" class="image-wrapper"
                         style="width: 20%; position: relative;">
-                        <img src="/images/lanh.png" alt="binh"
+                        <img src="lanh.png" alt="binh"
                             class="image_info"
                             width="100%" height="380vh" />
                         <div class="info-box">
@@ -172,7 +172,7 @@
                     </a>
                     <a href="/services.html" class="image-wrapper"
                         style="width: 20%; position: relative;">
-                        <img src="/images/binhan_yenlanh.png" alt="binh"
+                        <img src="binhan_yenlanh.png" alt="binh"
                             class="image_info"
                             style="width: 100%;" height="380vh" />
                         <div class="info-box">
@@ -213,7 +213,7 @@
 
         <!-- Chatbot ẩn mặc định -->
 
-        <script src="/js/script.js"></script>
+        <script src="script.js"></script>
         <script
             src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     </body>
