--- a/services.html
+++ b/services.html
@@ -7,9 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>An Yên Spa</title>
         <base href="/anyenspa/">
-        <link rel="icon" href="/images/logo.jpg" type="image/x-icon">
-        <link href="/css/style.css" rel="stylesheet">
-        <link href="/css/home.css" rel="stylesheet">
+        <link rel="icon" href="logo.jpg" type="image/x-icon">
+        <link href="style.css" rel="stylesheet">
+        <link href="home.css" rel="stylesheet">
         <link
             href="https://fonts.googleapis.com/css2?family=Chivo:wght@200&family=Gentium+Plus&display=swap"
             rel="stylesheet">
@@ -30,7 +30,7 @@
             <!--Main Content-->
             <div
                 style="background-color: #fcfcfc;">
-                <img src="/images/Service.png" width="45%"
+                <img src="Service.png" width="45%"
                     style="margin-left:27%; margin-top: 5vh; margin-bottom: 5vh; border-radius: 30px !important;">
             </div>
             <!--Float tool-->
@@ -60,7 +60,7 @@
 
         <!-- Chatbot ẩn mặc định -->
 
-        <script src="/js/script.js"></script>
+        <script src="script.js"></script>
         <script
             src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     </body>
