--- a/book.html
+++ b/book.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>An Yên Spa</title>
         <base href="/anyenspa/">
-        <link rel="icon" href="/images/logo.jpg" type="image/x-icon">
-        <link href="/css/style.css" rel="stylesheet">
-        <link href="/css/book.css" rel="stylesheet">
+        <link rel="icon" href="logo.jpg" type="image/x-icon">
+        <link href="style.css" rel="stylesheet">
+        <link href="book.css" rel="stylesheet">
         <link
             href="https://fonts.googleapis.com/css2?family=Chivo:wght@200&family=Gentium+Plus&display=swap"
             rel="stylesheet">
@@ -52,7 +52,7 @@
 
         <!-- Chatbot ẩn mặc định -->
 
-        <script src="/js/script.js"></script>
+        <script src="script.js"></script>
         <script
             src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
         <!-- Script từ Calendly -->
