--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>An Yên Spa</title>
-        <base href="/anyenspa/">  
         <link rel="icon" href="logo.jpg" type="image/x-icon">
         <link href="style.css" rel="stylesheet">
         <link href="home.css" rel="stylesheet">
@@ -57,7 +56,7 @@
 
         <!-- Chatbot ẩn mặc định -->
 
-        <script src="/js/script.js"></script>
+        <script src="script.js"></script>
         <script
             src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     </body>
