--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
       href="index.html" data-link class="text-decoration-none"
       style="color: black;">
       <h1 class="h4 m-0">
-        <img src="/images/logo_no.png" alt="logo" height="80vh" />
+        <img src="logo_no.png" alt="logo" height="80vh" />
         An Yên Spa
       </h1>
     </a>
