--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
             <!--Main Content-->
             <div
                 style="background-color: #fcfcfc;">
-                <img src="Service.png" width="45%"
+                <img src="service.png" width="45%"
                     style="margin-left:27%; margin-top: 5vh; margin-bottom: 5vh; border-radius: 30px !important;">
             </div>
             <!--Float tool-->
