--- a/about.html
+++ b/about.html
@@ -27,19 +27,19 @@
             <!--Main Content-->
             <div style="background-color: #fcfcfc;">
                 <img src="about.png" alt="about" width="45%"
-                    style="margin-left:27%; margin-top: 5vh; margin-bottom: 5vh; border-radius: 30px !important;">
+                    style="margin-left:27%; margin-top: 5vh; margin-bottom: 5vh; border-radius: 4.5% !important;">
             </div>
             <!--Float tool-->
             <div>
                 <!-- Book-->
                 <button id="fa-calendar" class="btn btn_fixed"
-                    style="bottom: 128px;"
+                    style="bottom: 128px;;"
                     onclick="window.location.href='book.html'">
                     <i class="fa-regular fa-calendar" style="color: white;"></i>
                 </button>
                 <!-- Scroll To Top-->
                 <button id="backToTop" class="btn btn_fixed"
-                    style="bottom: 80px; display: none;">
+                    style="bottom: 90px; display: none;">
                     <i class="fa-solid fa-arrow-up" style="color:white;"></i>
                 </button>
                 <!-- Chatbot-->
