--- a/footer.html
+++ b/footer.html
@@ -1,54 +1,55 @@
 <footer class="footer-custom py-4">
-  <div class="container-fluid px-5">
+  <div class="container-fluid px-4">
     <div class="row">
-      <div class="col-5 mb-4">
+      <!-- Cột 1 -->
+      <div class="col-12 col-md-6 col-lg-5 mb-4">
         <h6 class="text-uppercase content-head">Đăng ký thành viên</h6>
         <p class="fw-semibold mb-3 fst-italic">
           Đăng ký ngay để nhận ưu đãi lên đến 30%
         </p>
-        <div style="display: flex;">
-          <input type="text" class="mb-2 contact_form"
-            placeholder="Số điện thoại..." />
-          <button type="submit" id="btn_register" class=" mb-2 fw-bold">Đăng ký
-            ngay</button>
+        <div class="d-flex flex-column flex-sm-row">
+          <input type="text" class="mb-2 contact_form me-sm-2" placeholder="Số điện thoại..." />
+          <button type="submit" id="btn_register" class="mb-2 fw-bold">Đăng ký ngay</button>
         </div>
       </div>
 
-      <div class="col-3 mb-4">
+      <!-- Cột 2 -->
+      <div class="col-12 col-md-2 mb-4">
         <h6 class="text-uppercase content-head">An Yên Spa</h6>
         <div class="list-unstyled">
-          <a href="#" class="footer-link">Về chúng tôi</a><br>
-          <a href="#" class="footer-link">Dịch vụ</a><br>
-          <a href="#" class="footer-link">Đặt lịch</a>
+          <a href="about.html" class="footer-link">Về chúng tôi</a><br>
+          <a href="services.html" class="footer-link">Dịch vụ</a><br>
+          <a href="book.html" class="footer-link">Đặt lịch</a>
         </div>
       </div>
 
-      <div class="col-4">
+      <!-- Cột 3 -->
+      <div class="col-12 col-md-5">
         <h6 class="text-uppercase content-head">Thông tin liên hệ</h6>
         <table>
           <tbody>
             <tr class="info_table">
-              <td>                
+              <td>
                 <i class="fa-solid fa-location-dot"></i>
-                <span class="info-contact">Số 8 Nguyễn Văn Tráng, Quận 1</span>
+                <span class="info-contact d-inline-block ms-2">Số 8 Nguyễn Văn Tráng, Quận 1, Tp.Hồ Chí Minh</span>
               </td>
             </tr>
             <tr class="info_table">
               <td>
                 <i class="fa-solid fa-envelope"></i>
-                <span class="info-contact">abc@gmail.com</span> 
+                <span class="info-contact d-inline-block ms-2">anyenspa@gmail.com</span> 
               </td>
             </tr>
             <tr class="info_table">
               <td>
                 <i class="fa-solid fa-phone"></i>
-                <span class="info-contact">0124352342</span>
+                <span class="info-contact d-inline-block ms-2">+012-345-6789</span>
               </td>
             </tr>
             <tr class="info_table">
               <td>
                 <i class="fa-solid fa-calendar"></i>
-                <span class="info-contact">8AM - 5PM</span>
+                <span class="info-contact d-inline-block ms-2">10:00 - 20:00 (Thứ 3 đến Chủ nhât)</span>
               </td>
             </tr>
           </tbody>
