--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="col-4 service_detail">
                         <img src="binh.png"
                             class="d-block mx-auto popular_img"
-                            alt="Bình" width="350vw" height="400vh" />
+                            alt="Bình" width="250vw" height="300vh" />
                         <div class="detail_cover">
                             <p class="text-center popular_head">Gói Bình</p>
                             <p class="text-center">30 phút - 69k</p>
@@ -57,7 +57,7 @@
                     <div class="col-4 service_detail">
                         <img src="yen.png"
                             class="d-block mx-auto popular_img"
-                            alt="Bình" width="350vw" height="400vh" />
+                            alt="Bình" width="250vw" height="300vh" />
                         <div class="detail_cover">
                             <p class="text-center popular_head">Gói Yên</p>
                             <p class="text-center">75 phút - 229k</p>
@@ -66,8 +66,8 @@
                     <div class="col-4 service_detail">
                         <img src="binhan_yenlanh.png"
                             class="d-block mx-auto popular_img" alt="Bình"
-                            width="350vw"
-                            height="400vh" />
+                            width="250vw"
+                            height="300vh" />
                         <div class="detail_cover">
                             <p class="text-center popular_head">Bình An - Yên
                                 Lành</p>
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <div class="justify-content-center d-flex col-12">
-                        <a href="book.html" class="popular_btn">Đặt lịch
+                        <a href="book.html" class="popular_btn my-auto">Đặt lịch
                             ngay</a>
                     </div>
                 </div>
@@ -83,12 +83,12 @@
                 <div class="overflow-x-hidden intro">
                     <div style="width:60vw;"
                         class="d-flex justify-content-between align-items-center flex-wrap intro_box">
-                        <div class="col-md-8 intro_text">
-                            <h1
-                                style="font-family: 'Chivo', sans-serif; font-weight: 900; text-transform: uppercase; color: #006747">Về
-                                An Yên..</h1>
+                        <div class="col-md-7 intro_text mt-2">
+                            <h2
+                                style="font-family: 'Chivo', sans-serif; font-weight: 900; text-transform: uppercase; color: #006747;">Về
+                                An Yên..</h2>
                             <hr>
-                            <p class="mt-2">
+                            <p class="mt-2" style="font-size: 0.7rem;">
                                 Lấy cảm hứng từ thiên nhiên và phong cách sống
                                 chậm, <strong>AN YÊN.. Spa</strong> mang đến một
                                 hành trình chăm
@@ -105,7 +105,7 @@
                                 tế và đầy yêu thương. Chúng tôi cung cấp đa dạng
                                 các liệu trình chăm sóc như:<br>
                                 <ul
-                                    style="list-style: none; margin-top:-1vh; padding-left: 0.3vw;">
+                                    style="list-style: none; margin-top:-1vh; padding-left: 0.3vw; font-size: 0.7rem;">
                                     <li>Massage toàn thân</li>
                                     <li>Gội đầu dưỡng sinh theo Đông y</li>
                                     <li>Chăm sóc dưỡng da mặt và cơ thể</li>
@@ -114,7 +114,7 @@
 
                             </p>
                         </div>
-                        <div class="col-md-4 text-center">
+                        <div class="col-md-5 text-center">
                             <img src="Intro.jpg" alt="about"
                                 class="img-fluid rounded"
                                 style="width: 100%; height: 55vh;" />
@@ -123,7 +123,7 @@
                 </div>
                 <!-- All Services-->
                 <div class="d-flex my-5vh">
-                    <a href="/services.html" class="image-wrapper"
+                    <a href="services.html" class="image-wrapper"
                         style="width: 20%; position: relative;">
                         <img src="binh.png" alt="binh"
                             class="image_info"
@@ -135,7 +135,7 @@
                                 đầu và tạo kiểu tóc cơ bản.</p>
                         </div>
                     </a>
-                    <a href="/services.html" class="image-wrapper"
+                    <a href="services.html" class="image-wrapper"
                         style="width: 20%; position: relative;">
                         <img src="an.png" alt="binh" class="image_info"
                             width="100%" height="380vh" />
@@ -146,7 +146,7 @@
                                 gội đầu thảo dược và dưỡng tóc cơ bản.</p>
                         </div>
                     </a>
-                    <a href="/services.html" class="image-wrapper"
+                    <a href="services.html" class="image-wrapper"
                         style="width: 20%; position: relative;">
                         <img src="yen.png" alt="binh" class="image_info"
                             width="100%" height="380vh" />
@@ -157,7 +157,7 @@
                                 huyệt đầu và chăm sóc tóc chuyên sâu.</p>
                         </div>
                     </a>
-                    <a href="/services.html" class="image-wrapper"
+                    <a href="services.html" class="image-wrapper"
                         style="width: 20%; position: relative;">
                         <img src="lanh.png" alt="binh"
                             class="image_info"
@@ -169,7 +169,7 @@
                                 tóc bằng tinh chất cao cấp.</p>
                         </div>
                     </a>
-                    <a href="/services.html" class="image-wrapper"
+                    <a href="services.html" class="image-wrapper"
                         style="width: 20%; position: relative;">
                         <img src="binhan_yenlanh.png" alt="binh"
                             class="image_info"
@@ -195,7 +195,7 @@
                 </button>
                 <!-- Scroll To Top-->
                 <button id="backToTop" class="btn btn_fixed"
-                    style="bottom: 80px; display: none;">
+                    style="bottom: 90px; display: none;">
                     <i class="fa-solid fa-arrow-up" style="color:white;"></i>
                 </button>
                 <!-- Chatbot-->
