[Update] modify based on 1520px screen

--- a/footer.html
+++ b/footer.html
@@ -49,7 +49,7 @@
             <tr class="info_table">
               <td>
                 <i class="fa-solid fa-calendar"></i>
-                <span class="info-contact d-inline-block ms-2">10:00 - 20:00 (Thứ 3 đến Chủ nhât)</span>
+                <span class="info-contact d-inline-block ms-2">10:00 - 20:00 (Thứ 3 đến Chủ nhậtt)</span>
               </td>
             </tr>
           </tbody>
