--- a/about.html
+++ b/about.html
@@ -20,7 +20,8 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet">
     </head>
-    <body>
+    <body style="
+    max-width: 15208px !important;">
         <div id="header"></div>
 
         <div id="content">
@@ -39,7 +40,7 @@
                 </button>
                 <!-- Scroll To Top-->
                 <button id="backToTop" class="btn btn_fixed"
-                    style="bottom: 90px; display: none;">
+                    style="bottom: 85px; display: none;">
                     <i class="fa-solid fa-arrow-up" style="color:white;"></i>
                 </button>
                 <!-- Chatbot-->
