--- a/book.html
+++ b/book.html
@@ -19,7 +19,8 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet">
     </head>
-    <body>
+    <body style="
+    max-width: 15208px !important;">
         <div id="header"></div>
 
         <div id="content">
