--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet">
     </head>
-    <body>
+    <body style="
+    max-width: 15208px !important;">
         <div id="header"></div>
 
         <div id="content">
@@ -48,7 +49,7 @@
                     <div class="col-4 service_detail">
                         <img src="binh.png"
                             class="d-block mx-auto popular_img"
-                            alt="Bình" width="250vw" height="300vh" />
+                            alt="Bình" width="280vw" height="350vh"/>
                         <div class="detail_cover">
                             <p class="text-center popular_head">Gói Bình</p>
                             <p class="text-center">30 phút - 69k</p>
@@ -57,7 +58,7 @@
                     <div class="col-4 service_detail">
                         <img src="yen.png"
                             class="d-block mx-auto popular_img"
-                            alt="Bình" width="250vw" height="300vh" />
+                            alt="Bình" width="280vw" height="350vh" />
                         <div class="detail_cover">
                             <p class="text-center popular_head">Gói Yên</p>
                             <p class="text-center">75 phút - 229k</p>
@@ -66,8 +67,7 @@
                     <div class="col-4 service_detail">
                         <img src="binhan_yenlanh.png"
                             class="d-block mx-auto popular_img" alt="Bình"
-                            width="250vw"
-                            height="300vh" />
+                            width="280vw" height="350vh"/>
                         <div class="detail_cover">
                             <p class="text-center popular_head">Bình An - Yên
                                 Lành</p>
@@ -75,20 +75,19 @@
                         </div>
                     </div>
                     <div class="justify-content-center d-flex col-12">
-                        <a href="book.html" class="popular_btn my-auto">Đặt lịch
-                            ngay</a>
+                        <a href="book.html" class="popular_btn pt-1">Đặt lịch ngay</a>
                     </div>
                 </div>
                 <!-- About Us-->
                 <div class="overflow-x-hidden intro">
                     <div style="width:60vw;"
                         class="d-flex justify-content-between align-items-center flex-wrap intro_box">
-                        <div class="col-md-7 intro_text mt-2">
-                            <h2
+                        <div class="col-md-8 intro_text mt-2">
+                            <h1
                                 style="font-family: 'Chivo', sans-serif; font-weight: 900; text-transform: uppercase; color: #006747;">Về
-                                An Yên..</h2>
+                                An Yên..</h1>
                             <hr>
-                            <p class="mt-2" style="font-size: 0.7rem;">
+                            <p class="mt-2" style="font-size: 0.9rem;">
                                 Lấy cảm hứng từ thiên nhiên và phong cách sống
                                 chậm, <strong>AN YÊN.. Spa</strong> mang đến một
                                 hành trình chăm
@@ -105,7 +104,7 @@
                                 tế và đầy yêu thương. Chúng tôi cung cấp đa dạng
                                 các liệu trình chăm sóc như:<br>
                                 <ul
-                                    style="list-style: none; margin-top:-1vh; padding-left: 0.3vw; font-size: 0.7rem;">
+                                    style="list-style: none; margin-top:-1vh; padding-left: 0.3vw; font-size:0.9rem;">
                                     <li>Massage toàn thân</li>
                                     <li>Gội đầu dưỡng sinh theo Đông y</li>
                                     <li>Chăm sóc dưỡng da mặt và cơ thể</li>
@@ -114,7 +113,7 @@
 
                             </p>
                         </div>
-                        <div class="col-md-5 text-center">
+                        <div class="col-md-4 text-center">
                             <img src="Intro.jpg" alt="about"
                                 class="img-fluid rounded"
                                 style="width: 100%; height: 55vh;" />
@@ -195,7 +194,7 @@
                 </button>
                 <!-- Scroll To Top-->
                 <button id="backToTop" class="btn btn_fixed"
-                    style="bottom: 90px; display: none;">
+                    style="bottom: 85px; display: none;">
                     <i class="fa-solid fa-arrow-up" style="color:white;"></i>
                 </button>
                 <!-- Chatbot-->
