--- a/footer.html
+++ b/footer.html
@@ -15,7 +15,7 @@
 
       <!-- Cột 2 -->
       <div class="col-12 col-md-2 mb-4">
-        <h6 class="text-uppercase content-head">An Yên Spa</h6>
+        <h6 class="text-uppercase content-head">An Yên.. Spa</h6>
         <div class="list-unstyled">
           <a href="about.html" class="footer-link">Về chúng tôi</a><br>
           <a href="services.html" class="footer-link">Dịch vụ</a><br>
