--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
       style="color: black;">
       <h1 class="h4 m-0">
         <img src="logo_no.png" alt="logo" height="80vh" />
-        An Yên Spa
+        An Yên.. Spa
       </h1>
     </a>
     <nav class="navbar navbar-expand p-2 justify-content-end header-menu">
