--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="overflow-x-hidden intro">
                     <div style="width:60vw;"
                         class="d-flex justify-content-between align-items-center flex-wrap intro_box">
-                        <div class="col-md-8 intro_text mt-2">
+                        <div class="col-md-8 intro_text">
                             <h1
                                 style="font-family: 'Chivo', sans-serif; font-weight: 900; text-transform: uppercase; color: #006747;">Về
                                 An Yên..</h1>
