[Update] Chatbot title

--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
                 <!-- Chatbot-->
                 <df-messenger
                     intent="WELCOME"
-                    chat-title="AnYenBot"
+                    chat-title="An Yên.. Spa"
                     agent-id="c8a96dcd-b803-423b-8d36-764b9df6ab72"
                     language-code="vi">
                 </df-messenger>
